# dict2dataclass

./: Makefile  README.md  pyproject.toml
.github/workflows/: release.yml
dict2dataclass/: __init__.py  dict_field.py  from_dict.py  to_dict.py
tests/: test_from_dict.py  test_to_dict.py
